# stiralka_crm

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
project_root/: celery.py  settings.py  urls.py
schedule/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py
schedule/management/commands/: create_cells_for_two_weeks.py  set_for_all_users_restricton_on_use.py
schedule/migrations/: 0001_initial.py  0002_add_days.py  0002_auto_20240105_1252.py  0003_remove_cell_user_talon.py  0004_squash_migration.py
schedule/templates/: main.html  schedule.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_restriction_on_use_count.py
