[tool.poetry]
name = "stiralka-crm"
version = "0.1.0"
description = ""
authors = ["HomeSani <dfghjjhgfd311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-environ = "^0.11.2"
django-stubs = "^4.2.5"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
